# XCT_OM_Unet

./: .gitignore  README.md  pyproject.toml
configs/: unet_baseline.yaml
src/xct_to_om_unet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/xctom/: dataset.py  infer.py  losses.py  metrics.py  model_unet.py  train.py  utils.py
tests/: test_smoke.py
